Tue Apr 27 06:25:27 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
          Implemented get_discovered_participant_data and
          get_discovered_topic_data.

        * connectors/dds4ccm/impl/dds/ndds/ParticipantBuiltinTopicData.h:
        * connectors/dds4ccm/impl/dds/ndds/TopicBuiltinTopicData.h:
          Created streaming operators for ParticipantBuiltinTopicData and
          TopicBuiltinTopicData.

Mon Apr 26 17:35:11 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_EntityComponent.idl:
        * ccm/CCM_Object.idl:
        * ccm/CCM_PrimaryKeyBase.idl:
        * ccm/CCM_ProxyHomeRegistration.idl:
        * ccm/CCM_Receptacle.idl:
        * ccm/CCM_Session2Context.idl:
        * ccm/CCM_SessionSynchronization.idl:
        * ccm/CCM_StateIdFactory.idl:
        * ccm/CCM_Transaction.idl:
          Improved spec compliance

Mon Apr 26 14:56:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Base.idl:
        * ccm/CCM_CCM2Context.idl:
        * ccm/CCM_CCMException.idl:
        * ccm/CCM_ComponentId.idl:
        * ccm/CCM_Context.idl:
        * ccm/CCM_EnterpriseComponent.idl:
        * ccm/CCM_Entity2Context.idl:
        * ccm/CCM_EntityContext.idl:
          Checked these file for spec compliance and list from which section
          this is coming

Mon Apr 26 14:52:13 UTC 2010  Marijke  Hengstmengel  <mhengstmengel@remedy.nl>

        * docs/OMG-CCM-Tutorial.ppt
        Add changes for AMI4CCM.

Mon Apr 26 10:16:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
          Implemented create_multitopic and delete_multitopic.

        * connectors/dds4ccm/impl/dds/Publisher.cpp:
          DDSDataWriter on proxy was set twice. This let to
          test issues. These should be resolved now.

Fri Apr 23 19:33:13 UTC 2010  Martin Corino <mcorino@remedy.nl>
