@@ -1,3 +1,8 @@
+Tue Apr 27 06:55:19 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/Subscriber.cpp:
+          Implemented get_datareaders.
+
 Tue Apr 27 06:25:27 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
